# daemon

./: .gitignore  Makefile  README.md  daemon.py  pyproject.toml  requirements.txt  server.py
daemon/: ALL.py  CSG_SIM.py  KHARG_ISLAND.py  __init__.py
persian_gulf_simulation/: config.py  generate_wargame_kml.py  runner.py
persian_gulf_simulation/agents/: __init__.py  base.py  factory.py
persian_gulf_simulation/kml/: captions.py  descriptions.py  document.py  placemarks.py  styles.py
persian_gulf_simulation/simulation/: engine.py
web/: index.html  worker.js
